--- a/app/build.gradle
+++ b/app/build.gradle
@@ -20,8 +20,20 @@ android {
 }
 
 dependencies {
-    compile 'com.taboola:android-sdk:1.1.0@aar'
+    compile 'com.taboola:android-sdk:1.+@aar'
+
+    // include if you want ads to be open in chrome tabs rather than in a default browser
     compile 'com.android.support:customtabs:25.1.1'
+
+    // include if you are using DFP mediation
+    compile 'com.google.firebase:firebase-ads:10.0.1'
+
+    // include if you are using MoPub mediation
+    compile('com.mopub:mopub-sdk-banner:4.9.0@aar') {
+        transitive = true
+    }
+
+    // dependencies for sample app only
     compile 'com.android.support:appcompat-v7:25.1.1'
     compile 'com.android.support:design:25.1.1'
     compile 'com.android.support:support-v4:25.1.1'
