EDIT: override min sdk in MoPub

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -23,13 +23,13 @@ dependencies {
     compile 'com.taboola:android-sdk:1.+@aar'
 
     // include if you want ads to be open in chrome tabs rather than in a default browser
-    compile 'com.android.support:customtabs:25.1.1'
+    compile 'com.android.support:customtabs:25.+'
 
     // include if you are using DFP mediation
-    compile 'com.google.firebase:firebase-ads:10.0.1'
+    compile 'com.google.firebase:firebase-ads:10.+'
 
     // include if you are using MoPub mediation
-    compile('com.mopub:mopub-sdk-banner:4.9.0@aar') {
+    compile('com.mopub:mopub-sdk-banner:4.+@aar') {
         transitive = true
     }
 
