--- a/app/build.gradle
+++ b/app/build.gradle
@@ -26,7 +26,7 @@ dependencies {
     compile 'com.android.support:customtabs:25.+'
 
     // include if you are using DFP mediation
-    compile 'com.google.firebase:firebase-ads:10.+'
+    compile 'com.google.firebase:firebase-ads:10.0.1'
 
     // include if you are using MoPub mediation
     compile('com.mopub:mopub-sdk-banner:4.+@aar') {
