--- a/app/build.gradle
+++ b/app/build.gradle
@@ -23,23 +23,20 @@ dependencies {
     compile 'com.taboola:android-sdk:1.+@aar'
 
     // include if you want ads to be open in chrome tabs rather than in a default browser
-    compile 'com.android.support:customtabs:25.1.1'
+    compile 'com.android.support:customtabs:25.3.1'
 
     // include if you are using DFP mediation
     compile 'com.google.firebase:firebase-ads:10.0.1'
 
     // include if you are using MoPub mediation
-    compile('com.mopub:mopub-sdk-banner:4.+@aar') {
+    compile('com.mopub:mopub-sdk-banner:4.16.1@aar') {
         transitive = true
+        exclude module: 'libAvid-mopub'
+        exclude module: 'moat-mobile-app-kit'
     }
 
     // dependencies for sample app only
-    compile 'com.android.support:appcompat-v7:25.1.1'
-    compile 'com.android.support:design:25.1.1'
-    compile 'com.android.support:support-v4:25.1.1'
-
-    testCompile 'junit:junit:4.12'
-    androidTestCompile('com.android.support.test.espresso:espresso-core:2.2.2', {
-        exclude group: 'com.android.support', module: 'support-annotations'
-    })
+    compile 'com.android.support:appcompat-v7:25.3.1'
+    compile 'com.android.support:design:25.3.1'
+    compile 'com.android.support:support-v4:25.3.1'
 }
