--- a/.gitignore
+++ b/.gitignore
@@ -1,13 +1,7 @@
 *.iml
 .gradle
 /local.properties
-/.idea/workspace.xml
-/.idea/libraries
-.idea/tasks.xml
-.idea/gradle.xml
-.idea/markdown-navigator/
-.idea/markdown-navigator.xml
-.idea/misc.xml
+/.idea/
 .DS_Store
 /build
 /captures
