--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,11 +1,11 @@
 apply plugin: 'com.android.application'
 
 android {
-    compileSdkVersion 25
-    buildToolsVersion "25.0.2"
+    compileSdkVersion 26
+    buildToolsVersion "26.0.2"
     defaultConfig {
         applicationId "com.taboola.taboolasample"
-        minSdkVersion 9
+        minSdkVersion 14
         targetSdkVersion 25
         versionCode 1
         versionName "1.0"
@@ -23,20 +23,20 @@ dependencies {
     compile 'com.taboola:android-sdk:1.+@aar'
 
     // include if you want ads to be open in chrome tabs rather than in a default browser
-    compile 'com.android.support:customtabs:25.3.1'
+    compile 'com.android.support:customtabs:26.1.0'
 
     // include if you are using DFP mediation
-    compile 'com.google.firebase:firebase-ads:10.0.1'
+//    compile 'com.google.firebase:firebase-ads:11.4.2'
 
     // include if you are using MoPub mediation
-    compile('com.mopub:mopub-sdk-banner:4.16.1@aar') {
-        transitive = true
-        exclude module: 'libAvid-mopub'
-        exclude module: 'moat-mobile-app-kit'
-    }
+//    compile('com.mopub:mopub-sdk-banner:4.16.1@aar') {
+//        transitive = true
+//        exclude module: 'libAvid-mopub'
+//        exclude module: 'moat-mobile-app-kit'
+//    }
 
     // dependencies for sample app only
-    compile 'com.android.support:appcompat-v7:25.3.1'
-    compile 'com.android.support:design:25.3.1'
-    compile 'com.android.support:support-v4:25.3.1'
+    compile 'com.android.support:appcompat-v7:26.1.0'
+    compile 'com.android.support:design:26.1.0'
+    compile 'com.android.support:support-v4:26.1.0'
 }
