--- a/app/build.gradle
+++ b/app/build.gradle
@@ -13,8 +13,10 @@ android {
     }
     buildTypes {
         release {
-            minifyEnabled false
-            proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
+            minifyEnabled true
+            proguardFile getDefaultProguardFile('proguard-android.txt')
+            proguardFile 'proguard-taboola-widget.pro'
+            proguardFile 'proguard-sample-app.pro'
         }
     }
 }
@@ -26,7 +28,7 @@ dependencies {
     compile 'com.android.support:customtabs:26.1.0'
 
     // include if you are using DFP mediation
-//    compile 'com.google.firebase:firebase-ads:11.4.2'
+//    compile 'com.google.firebase:firebase-ads:11.6.0'
 
     // include if you are using MoPub mediation
 //    compile('com.mopub:mopub-sdk-banner:4.16.1@aar') {
