--- a/build.gradle
+++ b/build.gradle
@@ -1,5 +1,8 @@
 // Top-level build file where you can add configuration options common to all sub-projects/modules.
-
+project.ext {
+    // SDK versions
+    support_library = "27.1.1"
+}
 buildscript {
     repositories {
         jcenter()
