--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -6,7 +6,8 @@
     <uses-permission android:name="android.permission.INTERNET"/>
 
     <uses-sdk tools:overrideLibrary="com.mopub.mobileads.banner, com.mopub.mobileads.base"/>
-
+<none>
+</none>
     <application
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
